update ai check sensitive message and config db for dev